--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --env-file=.env src/index.ts"
   },
   "keywords": [
     "haveno",
@@ -16,6 +15,15 @@
   "author": "",
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "haveno-ts": "^0.0.33"
+    "@grammyjs/commands": "^1.0.5",
+    "@grammyjs/menu": "^1.3.0",
+    "@keyv/sqlite": "^4.0.1",
+    "grammy": "^1.35.1",
+    "haveno-ts": "^0.0.33",
+    "keyv": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.14",
+    "typescript": "^5.8.2"
   }
 }
