--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ BOT_TOKEN=
 HAVENO_URL=http://localhost:8080
 HAVENO_PASSWORD=password
 DB_PATH=sqlite://some/path/db.sqlite
+WATCH_DB_PATH=sqlite://some/other/path/db.sqlite
